--- a/lesson8/css/projects.css
+++ b/lesson8/css/projects.css
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
     margin-top: -50px;
     display: none;
 
@@ -51,5 +51,7 @@
     }
     to {
         transform: translateY(0px);
+        background-color: rgba(0, 0, 0, 0.5);
+
     }
 }
